--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ nav a{
     text-decoration: none;
     margin-right: 50px;
     color: white;
+    transation: 2s;
 }
 nav a:hover{
     color: blue;
